syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service TestService {
    rpc TestCall (TestRequest) returns (TestResponse) {}
    rpc TestCallNoParam (google.protobuf.Empty) returns (TestResponse) {}
}

message TestRequest {
    string test_string = 1;
    google.protobuf.Struct test_dict = 2;
}

enum TestEnum {
    OP1 = 0;
    OTRAOP = 1;
    ETC = 2;
}

message TestResponse {
    string test_string = 1;
    TestEnum test_enum = 2;
}
